<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="72sp"
        android:text="@string/pair_device"
        android:textColor="@color/colorOnBackground"
        android:textSize="24sp"
        android:textStyle="bold" />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        app:boxBackgroundColor="@color/colorSurface">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_dev_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/device_id"
            android:textColor="@color/colorOnBackground" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        app:boxBackgroundColor="@color/colorSurface">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_serial"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/device_serial"
            android:textColor="@color/colorOnBackground" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        app:boxBackgroundColor="@color/colorSurface">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_pairing_code"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/pairing_code"
            android:textColor="@color/colorOnBackground" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_find"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/find_device"
        app:backgroundTint="@color/colorPrimary" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_claim"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/claim_device"
        app:backgroundTint="@color/green_active" />
</LinearLayout>